--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>검색 홈페이지</title>
+<title>2024학년도 대입전형 기본계획</title>
 <style>
   /* 기본 폰트 설정 및 스타일링 */
   body {
