--- a/index.html
+++ b/index.html
@@ -1,85 +1,108 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>2024학년도 대입전형 기본계획</title>
-<style>
-  /* 기본 폰트 설정 및 스타일링 */
-  body {
-    font-family: Arial, sans-serif;
-  }
-  /* 검색 입력창 및 버튼을 중앙에 위치시키기 위한 스타일링 */
-  #search-container {
-    display: flex;
-    justify-content: center;
-    margin: 30px 0;
-  }
-  /* 검색 결과를 보여줄 영역에 마진 추가 */
-  #results {
-    margin-top: 20px;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>대학 기본계획 검색기</title>
+    <style>
+        /* 기본 스타일 설정 */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0 auto;
+        }
+
+        /* 컨테이너 스타일 */
+        .container {
+            display: flex;
+            width: 100%;
+            justify-content: space-evenly;
+        }
+
+        /* 왼쪽 및 오른쪽 영역 스타일 */
+        .left-side, .right-side {
+            flex: 1;
+            padding: 20px;
+        }
+
+        /* 검색 입력창 및 버튼 스타일 */
+        .search-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+        }
+
+        /* 검색 결과 영역 스타일 */
+        .results-container {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
-<!-- 검색 입력창 및 버튼 -->
-<div id="search-container">
-  <input type="text" id="search-input" placeholder="학교 이름을 정확하게 입력하세요...">
-  <button id="search-button">검색</button>
-</div>
+    <!-- 검색 입력창 및 버튼 -->
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="학교 이름을 입력하세요" />
+        <button id="searchButton">검색</button>
+    </div>
+    <!-- 왼쪽 및 오른쪽 영역 -->
+    <div class="container">
+        <!-- 왼쪽 영역: 안내 메시지 -->
+        <div class="left-side" id="leftSide">
+            <p>- 이 자료는 2024학년도 대학 기본계획 검색기입니다.</p>
+            <p>- 서울 동양고등학교 김진혁 선생님이 만들었습니다.</p>
+            <p>- 사용에 문의가 있으시면 kimjh0630@naver.com 으로 연락바랍니다.</p>
+            <p>- 검색시에는 학교 이름을 정확하게 입력하셔야 합니다. 예를들어 "서울대"라고 검색하면 검색이 되지 않고, "서을대학교"라고 검색해야지 검색됩니다.</p>
+            <p>- 각종 기술교육원의 경우 영문 대문자로 입력해야 합니다. 예를 들어 "digst"는 검색이 되지 않고 "DGIST"라고 검색해야 검색됩니다.</p>
+        </div>
+        <!-- 오른쪽 영역: 검색 결과 -->
+        <div class="right-side">
+            <div class="results-container" id="results"></div>
+        </div>
+    </div>
 
-<!-- 검색 결과를 표시할 영역 -->
-<div id="results"></div>
+    <script>
+        const searchButton = document.getElementById('searchButton');
+        const searchInput = document.getElementById('searchInput');
+        const resultsContainer = document.getElementById('results');
+        const leftSide = document.getElementById('leftSide');
+        const apiURL = "/file_list.json";
 
-<script>
-  // 검색 버튼에 클릭 이벤트 리스너 추가
-  document.getElementById("search-button").addEventListener("click", async () => {
-    // 검색어 가져오기
-    const searchInput = document.getElementById("search-input").value;
-    // 검색 결과 영역 가져오기
-    const resultsContainer = document.getElementById("results");
-    // 검색 결과 초기화
-    resultsContainer.innerHTML = "";
+        searchButton.addEventListener('click', async () => {
+            const searchTerm = searchInput.value.trim();
+            if (!searchTerm) {
+                alert("검색어를 입력하세요.");
+                return;
+            }
 
-    // 검색어가 비어있을 경우 경고창 표시
-    if (!searchInput) {
-      alert("검색어를 입력해주세요.");
-      return;
-    }
+            try {
+                const response = await fetch(apiURL);
+                if (!response.ok) {
+                    throw new Error("API 호출 실패");
+                }
 
-    // 파일명 목록을 가져올 서버 API 주소 설정
-    const apiURL = "/file_list.json";
+                const fileList = await response.json();
+                const fileMatch = fileList.find(file => file.replace(".pdf", "") === searchTerm);
 
+                resultsContainer.innerHTML = '';
 
-    try {
-      // API 호출하여 파일 목록 가져오기
-      const response = await fetch(apiURL);
-      const fileList = await response.json();
-
-      // 파일 목록에서 검색어와 일치하는 파일 찾기
-      const matchingFile = fileList.find(filename => {
-        const [name, extension] = filename.split(".");
-        return extension === "pdf" && name === searchInput;
-      });
-
-      // 일치하는 파일이 있는 경우 결과 영역에 PDF 파일 표시
-      if (matchingFile) {
-        const resultElement = document.createElement("iframe");
-        resultElement.src = `/data/${matchingFile}`;
-        resultElement.width = "100%";
-        resultElement.height = "600px";
-        resultsContainer.appendChild(resultElement);
-      } else {
-        // 일치하는 파일이 없는 경우 메시지 표시
-        resultsContainer.innerHTML = "검색 결과가 없습니다.";
-      }
-    } catch (error) {
-      // 오류 처리 및 경고창 표시
-      console.error(error);
-      alert("검색 중 오류가 발생했습니다.");
-    }
-  });
-</script>
+                if (fileMatch) {
+                    const pdfURL = `./data/${fileMatch}`;
+                    const pdfIframe = `<iframe src="${pdfURL}" width="100%" height="600px"></iframe>`;
+                    resultsContainer.innerHTML = pdfIframe;
+                    leftSide.style.display = 'none';
+                } else {
+                    resultsContainer.innerHTML = "<p>검색 결과가 없습니다.</p>";
+                    leftSide.style.display = 'block';
+                }
+            } catch (error) {
+                console.error(error);
+                alert("검색 중 오류가 발생했습니다.");
+            }
+        });
+    </script>
 </body>
 </html>
+
