--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>대학 기본계획 검색기</title>
+    <title>2024학년도 대학 기본계획 검색기</title>
     <style>
         /* 기본 스타일 설정 */
         body {
