--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <!-- 왼쪽 영역: 안내 메시지 -->
         <div class="left-side" id="leftSide">
-            <p>- <a href="https://2024univ.github.io"> 자른 자료를 포함하여 업그레이드중입니다. https://2024univ.github.io으로 이동해 주세요.</
+            <p>- <a href="https://2024univ.github.io"> 자른 자료를 포함하여 업그레이드중입니다. https://2024univ.github.io으로 이동해 주세요.</a></p>
             <p>- 이 자료는 2024학년도 대학 기본계획 검색기입니다.</p>
             <p>- 서울 동양고등학교 김진혁 선생님이 만들었습니다.</p>
             <p>- 사용에 문의가 있으시면 kimjh0630@naver.com 으로 연락바랍니다.</p>
